<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/content_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:textColor="@color/subtitle_text_color"
        android:textSize="@dimen/text_size_medium_small" />

    <LinearLayout
        android:id="@+id/layout_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strategy"
            android:textSize="14sp"
            android:textColor="#5B5B5B" />

        <TextView
            android:id="@+id/tv_strategy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:textColor="@color/subtitle_text_color"
            android:textSize="@dimen/text_size_medium_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="10dip"
            android:background="@color/divider_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/tv_trycount_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/try_count"
                android:textColor="#5B5B5B"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_trycount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_trycount_tip"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/tv_trycount_tip"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="2dip"
                android:textColor="@color/subtitle_text_color"
                android:textSize="@dimen/text_size_medium_small" />

            <TextView
                android:id="@+id/tv_downloadcount_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="85dp"
                android:layout_marginTop="2dip"
                android:text="@string/download_count"
                android:textColor="#5B5B5B"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_downloadcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignLeft="@id/tv_downloadcount_tip"
                android:layout_below="@id/tv_downloadcount_tip"
                android:layout_marginRight="85dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dip"
                android:textColor="@color/subtitle_text_color"
                android:textSize="@dimen/text_size_medium_small" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_text_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_bottom_op"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_size_small2"
            android:src="@drawable/icon_spread"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>